@@ -270,14 +270,20 @@ class CenterpagePage(Centerpage):
         regions = [LegacyRegion([zeit.web.core.centerpage.IRendered(
             self.area_ranking)])]
 
-        # Try to preserve centerpage header modules.
-        # XXX This could be a lot sleeker if done in config.
-        find = zeit.web.core.utils.find_block
-        header = find(values[0], module='headerimage') or find(
-            values[0], module='centerpage-header') or find(
-                values[0], module='search-form')
-        if header:
-            regions.insert(0, LegacyRegion([LegacyArea([header])]))
+        # We keep any areas of the first region that contain at least one kind
+        # of preserve-worthy module.
+        conf = zope.component.getUtility(zeit.web.core.interfaces.ISettings)
+        preserved_areas = []
+        for mod in conf.get('cp_preserve_modules_on_pagination', '').split():
+            module = zeit.web.core.utils.find_block(values[0], module=mod)
+            if module:
+                area = module.__parent__
+                if area not in preserved_areas:
+                    preserved_areas.append(
+                        zeit.web.core.centerpage.IRendered(area))
+
+        if preserved_areas:
+            regions.insert(0, LegacyRegion(preserved_areas))
 
         return regions
 
